--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,7 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center"
-        android:text="@string/home_no_runs_label" />
+        android:text="@string/home_no_runs_label"
+        android:visibility="gone" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton"
@@ -25,5 +26,15 @@
         app:backgroundTint="@color/blue"
         app:fabSize="normal"
         app:srcCompat="@drawable/add_icon" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/homeAnimationView"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_centerInParent="true"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_speed="0.1"
+        app:lottie_rawRes="@raw/scuba_dinosaur" />
 
 </RelativeLayout>
