--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".HomeActivity">
 
+
+
     <LinearLayout
+        android:id="@+id/summaryContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" />
